--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
     margin: 3rem auto;
     position: relative;
     background-color: white;
-    border: 1px solid black;
+    box-shadow: 0px 2px 4px -1px #0B0B0B0F,
+            0px 4px 6px -1px #0B0B0B1A;
     border-radius: 20px;
     padding: 3rem;
     width: fit-content;
@@ -21,13 +22,9 @@ body{
     width: 30rem;
     height: fit-content;
 }
-.container form li{
-    list-style: none;
-    margin: 5px 0;
-}
-form li label{
+label:not(.Q){
     cursor: pointer;
-
+    margin: 5px 0;
 }
 .btn{
     background: transparent;
@@ -46,4 +43,26 @@ form li label{
 #User, #CountResult{
     color: red;
     text-decoration: underline;
+}
+
+.text-username{
+    border: none;
+    background-color: #eee;
+    padding: 10px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+input[type="radio"]{
+    margin-left: 40px;
+    margin-right: 10px;
+}
+.form-group{
+    display: flex;
+    flex-direction: column;
+    border: 1px dashed gray;
+    border-radius: 5px;
+    margin: 5px 0;
+    padding: 10px;
 }
